[tool.poetry]
name = "analysis"
version = "0.1.0-alpha.13"
description = ""
authors = ["Moritz Makowski <moritz.makowski@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.*"
pydantic = "^1.10.5"
matplotlib = "^3.7.0"
psycopg = {extras = ["binary"], version = "^3.1.8"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
