[tool.poetry]
name = "sensor"
version = "0.1.0"
description = ""
authors = ["Moritz Makowski <moritz.makowski@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1.6.1"
psutil = "^5.9.3"
pyserial = "^3.5"
pigpio = {version = "^1.78", markers = "platform_machine == 'aarch64'"}
rpi-gpio = {version = "^0.7.1", markers = "platform_machine == 'aarch64'"}
smbus2 = {version = "^0.4.2", markers = "platform_machine == 'aarch64'"}
rpi-bme280 = {version = "^0.2.4", markers = "platform_machine == 'aarch64'"}

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
mypy = "^0.982"
types-psutil = "^5.9.5.4"
types-paho-mqtt = "^1.6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "ci: can be run in a CI environment",
    "integration: can only be run on a configured system",
]

[tool.mypy]
strict = true
implicit_reexport = true
no_warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "RPi.*",
    "pigpio",
    "bme280",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"