[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Felix Böhm <felix@felixboehm.dev>"]

[tool.poetry.dependencies]
python = "3.10.8"
starlette = "^0.21.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
asyncio-mqtt = "^0.14.0"
attrs = "^22.1.0"
Jinja2 = "^3.1.2"
asyncpg = "^0.27.0"
pydantic = "^1.10.2"
pendulum = "^2.1.2"
anyio = "^3.6.2"
asgi-lifespan = "^2.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.4.7"
mypy = "^0.982"
black = "^22.10.0"
sqlfluff = "^1.4.1"
httpx = "^0.23.0"
ruff = "^0.0.124"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.black]
preview = true

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []
target-version = "py310"

[tool.mypy]
show_error_codes = true
no_implicit_optional = true

[tool.sqlfluff.core]
dialect = "postgres"
templater = "jinja"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
