[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Felix Böhm <felix@felixboehm.dev>"]

[tool.poetry.dependencies]
python = "3.10.8"
starlette = "^0.21.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
asyncpg = "^0.27.0"
pydantic = "^1.10.2"
asyncio-mqtt = "^0.16.1"
passlib = {extras = ["argon2"], version = "^1.7.4"}
pendulum = "^2.1.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.4.7"
black = "^22.10.0"
sqlfluff = "^2.0.7"
httpx = "^0.23.0"
ruff = "^0.0.124"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
asgi-lifespan = "^2.0.0"
seaborn = "^0.12.2"

[tool.black]
preview = true

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []
target-version = "py310"

[tool.mypy]
show_error_codes = true
no_implicit_optional = true

[tool.sqlfluff.core]
dialect = "postgres"
templater = "placeholder"

[tool.sqlfluff.templater.placeholder]
param_style = "dollar"
user_identifier = "'016d56bc-029a-4fbc-86ea-d0b8c8a8dfd9'"
sensor_identifier = "'016d56bc-029a-4fbc-86ea-d0b8c8a8dfd9'"
network_identifier = "'016d56bc-029a-4fbc-86ea-d0b8c8a8dfd9'"
username = "'user'"
sensor_name = "'sensor'"
password_hash = "'9c8cf1d1ca883388'"
access_token_hash = "'9c8cf1d1ca883388'"
measurement = "{}"
configuration = "{}"
revision = 0
position_in_transmission = 0
creation_timestamp = 0
acknowledgement_timestamp = 0
severity = "'info'"
subject = "'subject'"
details = "'details'"
direction = "'next'"
success = "TRUE"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
